--- a/package.json
+++ b/package.json
@@ -1,20 +1,5 @@
 {
   "name": "tweettimely",
   "version": "1.0.0",
-  "description": "Social media management platform",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "build": "echo 'No build step required'"
-  },
-  "dependencies": {
-    "express": "^4.18.2"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.22"
-  },
-  "engines": {
-    "node": ">=14.0.0"
-  }
+  "private": true
 } 
